Refactor layout and footer structure for improved navigation and design
- Adjusted the homepage layout to enhance the positioning of the navbar and footer.
- Removed absolute positioning from project overlays for a cleaner appearance.
- Replaced the footer with a fixed vertical navigation bar for better accessibility to social links.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,11 +43,15 @@
     </script>
   </head>
 
-  <body class="min-h-screen flex flex-col">
-    <%= render 'shared/navbar' %>
-    <main class="flex-grow">
-      <%= yield %>
-    </main>
-    <%= render 'shared/footer' %>
+  <body class="min-h-screen relative">
+    <div class="flex">
+      <%= render 'shared/footer' %>
+      <div class="flex-1 ml-24">
+        <%= render 'shared/navbar' %>
+        <main class="flex-grow">
+          <%= yield %>
+        </main>
+      </div>
+    </div>
   </body>
 </html>
