--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -175,7 +175,7 @@
       <div class="bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
         <div class="relative">
           <img src="https://via.placeholder.com/800x400" alt="Project 1" class="w-full h-48 object-cover">
-          <div class="absolute top-0 left-0 w-full h-full bg-purple-600 opacity-0 hover:opacity-90 transition duration-300 flex items-center justify-center">
+          <div class=" w-full h-full bg-purple-600 opacity-0 hover:opacity-90 transition duration-300 flex items-center justify-center">
             <a href="#" class="text-white text-xl font-bold hover:underline">View Project</a>
           </div>
         </div>
@@ -204,7 +204,7 @@
       <div class="bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
         <div class="relative">
           <img src="https://via.placeholder.com/800x400" alt="Project 2" class="w-full h-48 object-cover">
-          <div class="absolute top-0 left-0 w-full h-full bg-purple-600 opacity-0 hover:opacity-90 transition duration-300 flex items-center justify-center">
+          <div class="w-full h-full bg-purple-600 opacity-0 hover:opacity-90 transition duration-300 flex items-center justify-center">
             <a href="#" class="text-white text-xl font-bold hover:underline">View Project</a>
           </div>
         </div>
@@ -233,7 +233,7 @@
       <div class="bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
         <div class="relative">
           <img src="https://via.placeholder.com/800x400" alt="Project 3" class="w-full h-48 object-cover">
-          <div class="absolute top-0 left-0 w-full h-full bg-purple-600 opacity-0 hover:opacity-90 transition duration-300 flex items-center justify-center">
+          <div class="w-full h-full bg-purple-600 opacity-0 hover:opacity-90 transition duration-300 flex items-center justify-center">
             <a href="#" class="text-white text-xl font-bold hover:underline">View Project</a>
           </div>
         </div>
