Refactor application layout and footer positioning for improved design
- Adjusted the application layout to include the footer within the main content area for better structure.
- Updated the footer's navigation bar to use a fixed position, enhancing accessibility and visibility of social links.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,12 +45,12 @@
 
   <body class="min-h-screen relative">
     <div class="flex">
-      <%= render 'shared/footer' %>
-      <div class="flex-1 ml-24">
+      <div class="">
         <%= render 'shared/navbar' %>
         <main class="flex-grow">
           <%= yield %>
         </main>
+        <%= render 'shared/footer' %>
       </div>
     </div>
   </body>
