Update application layout to enhance main content positioning and styling
- Adjusted the layout by adding a flex-1 class to the main content area for better responsiveness.
- Centered the main content using inline styles to improve visual alignment.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,10 +44,10 @@
   </head>
 
   <body class="min-h-screen relative">
-    <div class="flex">
-      <div class="">
+    <div class="">
+      <div class="flex-1">
         <%= render 'shared/navbar' %>
-        <main class="flex-grow">
+        <main class="flex-grow" style="place-content: center;">
           <%= yield %>
         </main>
         <%= render 'shared/footer' %>
